FIX: ListingTradeIcons css text alignments

--- a/frontend/toge-trades/src/components/trade-hub/listing-cards/ListingCards.module.css
+++ b/frontend/toge-trades/src/components/trade-hub/listing-cards/ListingCards.module.css
@@ -45,6 +45,7 @@
 }
 .user p{
   line-height: 0;
+  text-align: center;
 }
 .trades{
   display:flex;
