--- a/frontend/toge-trades/src/components/trade-hub/trade-transfer-icons/ListingTradeIcons.module.css
+++ b/frontend/toge-trades/src/components/trade-hub/trade-transfer-icons/ListingTradeIcons.module.css
@@ -5,7 +5,6 @@
   align-items: center;
   gap: 1.5em;
   width: 100%;
-  background-color: pink;
 }
 .offered p, .seeking p{
   line-height: 1;
